Fix dark mode - #316

--- a/packages/typescriptlang-org/src/components/layout/fonts.scss
+++ b/packages/typescriptlang-org/src/components/layout/fonts.scss
@@ -401,10 +401,8 @@
 body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  color: #323130;
   font-family: "Segoe UI Web (West European)", "Segoe UI", -apple-system,
     BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
-  font-size: 14px;
 }
 
 body button,
